# ChemFlow

./: Allgxx  CMakeLists.txt  ChemThermo.cpp  ChemThermo.h  Combustion.cpp  Combustion.h  README.md  chem_thermo.cpp  chem_thermo.h  chemflow  createFields.H  gmain  gpp  lininterp.cpp  lininterp.h  main.cpp  monitor.csv  output.csv  reactionOut.csv  tdma.cpp  tdma.h
ChemThermo/: ChemThermo.cpp  ChemThermo.h  gchem
case/chemkin/: chem.inp
case/system/: controlDict
sample/EthanolFlame/: chemflowPlot.py  plotOmega.py
sample/EthanolFlame/0/: p
sample/EthanolFlame/system/: fvSchemes
sample/MethaneFilter/0/: T
sample/MethaneFilter/system/: fvSchemes
sample/MethaneFilter0p333/: .~lock.reaction-0.0663787.csv#
sample/MethaneFlame/constant/: chemistryProperties
sample/MethaneFlame/system/: controlDict
samples/: plotOmega.py
samples/EthanolFlame/: input.txt
samples/MethaneFlame/: input.txt
test/: a.out  canteraTest.cpp  chemflowPlot.py  eigenTest.cpp  gpp  returnDouble.cpp  tdmatest.cpp  typedef.cpp
